test/functions/bharshbarg/assoc-ref-return.good
Testing associative array of arrays...
3
assoc-ref-return.chpl:15: error: halt reached - array index out of bounds: 50
